# gitlab-project-status

./: .env.sample  .gitignore  GEMINI.md  README.md  app.py  data_processor.py  db_manager.py  gitlab_service.py  projects.json.sample  pyproject.toml
templates/: add_project.html  index.html
